PreAuthorize done