@@ -14,18 +14,18 @@ import org.springframework.stereotype.Service;
 import org.springframework.util.StringUtils;
 
 import java.time.LocalDateTime;
-import java.util.Collections;
+import java.util.Set;
 import java.util.UUID;
-import java.util.concurrent.atomic.AtomicBoolean;
 
 @Service
 @Slf4j
 public class UserService implements UserDetailsService {
-    private  UserRepo userRepo;
-    private  MailSender mailSender;
-    private  PasswordEncoder encoder;
+    private UserRepo userRepo;
+    private MailSender mailSender;
+    private PasswordEncoder encoder;
 
-    public UserService(){}
+    public UserService() {
+    }
 
     @Autowired
     public UserService(UserRepo userRepo, MailSender mailSender, PasswordEncoder encoder) {
@@ -44,22 +44,22 @@ public class UserService implements UserDetailsService {
         return userRepo.findByEmail(email);
     }
 
-    public User saveUser(User user){
+    public User saveUser(User user) {
         return userRepo.save(user);
     }
 
-    public boolean addUser(User user){
+    public boolean addUser(User user) {
         User userFromDB = userRepo.findByUsername(user.getUsername());
-        if (userFromDB!=null){
+        if (userFromDB != null) {
             return false;
         }
         String password = user.getPassword();
         user.setPassword(encoder.encode(password));
         user.setActive(true);
-        user.setRoles(Collections.singleton(Role.ROLE_USER));
+        user.setRoles(Set.of(Role.ROLE_USER));
         user.setActivationCode(UUID.randomUUID().toString());
         userRepo.save(user);
-        if (!StringUtils.isEmpty(user.getEmail())){
+        if (!StringUtils.isEmpty(user.getEmail())) {
             user.setEmail(user.getEmail().toLowerCase());
             String message = String.format("Hello, %s!\nWelcome to Tracker system.\nPlease visit next link to activate your " +
                     "account:\nhttp://localhost:8084/activate/%s", user.getUsername(), user.getActivationCode());
@@ -71,28 +71,26 @@ public class UserService implements UserDetailsService {
 
     public boolean activateUser(String code) {
         User user = userRepo.findUserByActivationCode(code);
-        if (user==null){return false;}
+        if (user == null) {
+            return false;
+        }
         user.setActivationCode(null);
         userRepo.save(user);
         return true;
     }
 
-    public boolean hasRoleAdmin(OAuth2User oAuth2User){
-        User user = oauth(oAuth2User);
-        AtomicBoolean result = new AtomicBoolean(false);
-        user.getAuthorities().forEach(authority->{
-            if (authority.equals(Role.ROLE_ADMIN)){
-                result.set(true);
-            }
-        });
-        return result.get();
+    public Boolean hasRoleAdmin(OAuth2User oAuth2User, User userAuth) {
+        return getCurrentUser(userAuth, oAuth2User)
+                .getAuthorities()
+                .contains(Role.ROLE_ADMIN);
+
     }
 
     public User oauth(OAuth2User oAuth2User) {
         String email = oAuth2User.getAttribute("email");
         email = email.toLowerCase();
         User userFromDB = userRepo.findByEmail(email);
-        if (userFromDB==null){
+        if (userFromDB == null) {
             String googleId = oAuth2User.getAttribute("sub");
             String googleName = oAuth2User.getAttribute("name");
             String userpic = oAuth2User.getAttribute("picture");
@@ -108,7 +106,7 @@ public class UserService implements UserDetailsService {
             userFromDB.setActive(true);
             userFromDB.setEmail(email);
             userFromDB.setPassword("$2y$12$9LfMJxZo6meaapDwG6vxvufMCB73NgqTHebpOmLVTyrCiN00auRzS");
-            userFromDB.setRoles(Collections.singleton(Role.ROLE_USER));
+            userFromDB.setRoles(Set.of(Role.ROLE_USER));
 
             userFromDB.setGoogleId(googleId);
             userFromDB.setGoogleName(googleName);
@@ -122,11 +120,11 @@ public class UserService implements UserDetailsService {
         return userFromDB;
     }
 
-    public User getCurrentUser(User user, OAuth2User oAuth2User){
-        if (user!=null){
+    public User getCurrentUser(User user, OAuth2User oAuth2User) {
+        if (user != null) {
             return user;
         }
-        if (oAuth2User!=null){
+        if (oAuth2User != null) {
             return oauth(oAuth2User);
         }
         log.error("smth wrong user = null and oauthUser = null");
